[package]
name = "miser"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/54he/miser"
authors = ["awahe4600 <winbug11@outlook.com>"]
license = "GPL-3.0-or-later"
description = "A simple server"
license-file = "license"
keywords=["simple","server"]
[dependencies]
chrono = "0.4.38"
tokio = { version = "1.38", features = ["full"] }

[profile.max]
inherits = "release"
lto = true
